fix layout issue on offers page

--- a/src/core/molecules/cards/card.scss
+++ b/src/core/molecules/cards/card.scss
@@ -939,6 +939,7 @@ $small: 0.875rem;
   left: 0;
   display: flex;
   justify-content: center;
+  pointer-events: none;
 
   &__ear.icon {
     display: inline-flex;
